# runReview

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  groq_test.py  main_test.py  project_view.md  pyproject.toml  rag_plan.md  requirements.txt  run_full_automation.sh  start.sh
app/: main.py
app/agents/: architecture_agent.py  base.py  coordinator.py  meta_judge.py  mock_agents.py  quality_agent.py  security_agent.py
app/core/: config.py  logging.py
app/llmProvider/: base.py  config.yaml  router.py
app/prompts/: __init__.py  architecture.py  coordinator.py  meta_judge.py  quality.py  rag.py  security.py
app/providers/: base.py  groq.py  lancedb_provider.py
app/rag/: __init__.py
app/sdk/: agent.py
app/services/: orchestrator.py  repo_service.py
dev/: config.json  ultrathinking.skill  ut.toml
dev/ultrathinking/: SKILL.md
docs/plans/: 2025-07-15-re-implement-rag.md  2026-03-17-custom-orchestration-design.md  2026-03-17-minimal-mvp.md  2026-03-17-multi-provider-litellm-integration.md  2026-03-17-multi-provider-llm-gateway-design.md  2026-03-17-multi-provider-llm-gateway-implementation.md  2026-03-17-testing-orchestration.md  (+4 more)
tests/: audit_parsers.py  reproduce_agent_crash.py  test_agents.py  test_api_integration.py  test_config.py  test_coordinator.py  test_e2e_authentication_repo.py  test_lancedb_provider.py  test_lancedb_provider_search.py  test_llm_provider.py  test_loop_reproduction.py  test_main.py  test_orchestration_full.py  test_providers.py  test_rerank_cloudflare.py  test_reranker_failover.py  test_services.py
(+72 files in other folders)
